# TFG

./: README.md  pyproject.toml
data/processed/: chunks.json  datos_procesados.csv  embeddings.txt  enron_sample_100.json  enron_sample_1000+60.json  enron_sample_1000.json  model_comparison_results.json
src/: data_loader.py  embeddings_system.py  rag_engine.py  test_preguntas.txt
