[project]
name = "tfg"
version = "0.1.0"
description = ""
authors = [
    {name = "fran2410",email = "franciscochicotemartin@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "dateparser (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }  
]